Prevent table content from being too wide for table on smaller screens

--- a/compatible_index_sequences/static/compatible_index_sequences/css/app.css
+++ b/compatible_index_sequences/static/compatible_index_sequences/css/app.css
@@ -7,6 +7,11 @@
   text-align: center;
 }
 
+table {
+    table-layout:fixed;
+    width:100%;
+}
+
 td {
   border: 1px solid #ddd;
   cursor: default;
